# melange-json

./: .gitignore  .ocamlformat  CHANGES.md  JSONSCHEMA.md  Makefile  README.md  dune  dune-project  flake.nix  jest.config.js  jsonkit-native.opam  jsonkit.opam  melange-json-native.opam  melange-json.opam  melange-json.opam.template  package.json  ppx_deriving_json.opam  ppx_deriving_toml.e2e.t  ppx_deriving_toml.ml  ppx_deriving_toml.opam  ppx_deriving_tools.ml  ppx_deriving_tools.mli  ppx_deriving_tools.opam  run_examples.sh
.githooks/: reference-transaction
.github/workflows/: main.yml  nix.yml
browser/: dune  ppx_deriving_json_browser.ml  ppx_deriving_json_runtime.ml
examples/: complex.ml  decode.ml  dune  dynamicDict_Ocaml.ml  dynamicDict_Reason.re  encode.ml  parse.ml  tree.ml
json/: README.md  ppx_deriving_json.opam
json/browser/: ppx_deriving_json_runtime.ml
json/native/: dune  ppx_deriving_json_common.ml  ppx_deriving_json_native.ml  ppx_deriving_json_runtime.ml
json/test/: dune  example.ml  ppx_deriving_json_browser.e2e.t  ppx_deriving_json_browser.t  ppx_deriving_json_native.e2e.t  ppx_deriving_json_native.t
native/: dune  ppx_deriving_json_native.ml  ppx_deriving_json_runtime.ml
ppx/: README.md
ppx/browser/: dune  ppx_deriving_json_browser.ml  ppx_deriving_json_js.ml  ppx_deriving_json_runtime.ml
ppx/common/: ppx_deriving_json_common.ml  ppx_deriving_tools.ml
ppx/jsonschema/: attrs.ml  attrs.mli  ppx_deriving_jsonschema.ml  schema.ml  schema.mli
ppx/jsonschema/test/: .ocamlformat-ignore  README.md  dune  extra_fields.t  generate_schemas.ml  test.expected.ml  test.melange.expected.ml  test_schemas.expected.json  test_sig.t  wire.ml  wire.t
ppx/jsonschema/test/melange/: dune  generate_schemas.ml  tests.t
ppx/jsonschema/test/shared/: cases.ml  generate_schemas_cases.ml  schema_snapshot.ml
ppx/native/: dune  ppx_deriving_json_common.ml  ppx_deriving_json_errors.ml  ppx_deriving_json_native.ml  ppx_deriving_json_runtime.ml  ppx_deriving_tools.ml  ppx_deriving_tools.mli
ppx/native/common/: ast_helpers.ml  attrs.ml  attrs.mli  conv.ml  json_attrs.ml  json_string_deriver.ml  linter.ml  ppx_deriving_json_common.ml  ppx_deriving_tools.ml  ppx_deriving_tools.mli  repr.ml
ppx/runtime/browser/: dune  ppx_deriving_json_classify.ml  ppx_deriving_json_exception.ml  ppx_deriving_json_runtime.ml
ppx/runtime/native/: dune  ppx_deriving_json_classify.ml  ppx_deriving_json_exception.ml  ppx_deriving_json_runtime.ml
ppx/test/: Makefile  classify_drop_option.t  dune  example.ml  example_json_string.ml  intf.t  labeled_tuples.t  linter.t  nonrec_type_alias.t  poly.t  ppx_deriving_json_browser.e2e.t  ppx_deriving_json_js.e2e.t  ppx_deriving_json_js.t  ppx_deriving_json_js_errors.t  ppx_deriving_json_js_variants.e2e.t  ppx_deriving_json_native.e2e.t  ppx_deriving_json_native.t  ppx_deriving_json_native_errors.t  ptype_open.t  recursive_type_bindings.t  run.sh
ppx/test/allow_any.t/: prettify.ml  run.t  unknown_tag.json  wrong_payload.json
ppx/test/allow_any_poly.t/: dune  prettify.ml  run.t
ppx/test/catch_all.t/: dune  prettify.ml  run.t
ppx/test/errors.t/: deep_culprit.json  extra_field.json  missing_field.json  ok.json  prettify.ml  run.t  tag_as_string.json  unknown_tag.json  wide_culprit.json  wrong_core_type.json  wrong_core_type_wide.json  wrong_tag_payload.json
ppx/test/extended_polyvar_errors.t/: ok_child.json  ok_parent.json  prettify.ml  run.t  wrong_child_tag.json  wrong_parent_tag.json
ppx/test/native_safe.t/: dune  main.ml  run.t
ppx/test/polyvar_extends_errors.t/: run.t
ppx/tools/: ppx_deriving_tools.ml  ppx_deriving_tools.mli
shared/: dune  utils.ml
src/: Json.ml  Json.mli  Json_decode.ml  Json_decode.mli  Json_encode.ml  Json_encode.mli  classify.ml  dune  errors.ml  jsonkit.ml  jsonkit.mli  jsonkit_errors.ml  melange_json.ml  melange_json.mli
src/__tests__/: Json_decode_test.ml  Json_encode_test.ml  Json_test.ml  dune
src/jsonschema/: Ppx_deriving_jsonschema_runtime_classify.ml  dune  ppx_deriving_jsonschema_runtime.ml  ppx_deriving_jsonschema_runtime.mli  ppx_deriving_jsonschema_runtime_primitives.ml  ppx_deriving_jsonschema_runtime_primitives.mli
src/native/: Json.ml  classify.ml  dune  jsonkit.ml  melange_json.ml
src/native/jsonschema/: Ppx_deriving_jsonschema_runtime_classify.ml  dune  ppx_deriving_jsonschema_runtime.mli
test/: example.ml  ppx_deriving_json_browser.t  ppx_deriving_json_native.t
toml/: README.md  dune  dune-project  ppx_deriving_toml.ml  ppx_deriving_toml.t  ppx_deriving_toml_runtime.ml
tools/: dune-project  ppx_deriving_tools.ml  ppx_deriving_tools.mli
utils/: dune
