;; we start by ignoring node_modules. if you need to consume an OCaml 
;; project from `node_modules`, this should work:
;; - remove the `dirs` stanza below
;; - add a `(subdir node_modules (dirs only_your_package))`

(dirs :standard \ node_modules)

(rule
 (alias runtest)
 (deps
  (alias_rec test))
 (action
  (run npx jest)))

(rule
 (alias run-examples)
 (deps
  run_examples.sh
  (alias_rec examples))
 (action
  (run ./run_examples.sh)))
