(library
 (public_name melange-json.js)
 (name ppx_deriving_json_js)
 (modules
  :standard
  \
  ppx_deriving_json_runtime
  ppx_deriving_json_js_test)
 (libraries ppxlib)
 (ppx_runtime_libraries melange-json.js_runtime)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(library
 (public_name melange-json.js_runtime)
 (name ppx_deriving_json_js_runtime)
 (modules ppx_deriving_json_runtime)
 (wrapped false)
 (modes melange))

(executable
 (name ppx_deriving_json_js_test)
 (modules ppx_deriving_json_js_test)
 (libraries melange-json.js ppxlib))

(rule
 (target ppx_deriving_json_js.mli)
 (action
  (with-stdout-to
   %{target}
   (run echo ""))))

(rule
 (target ppx_deriving_json_js_test.ml)
 (action
  (with-stdout-to
   %{target}
   (run echo "let () = Ppxlib.Driver.standalone ()"))))

(copy_files#
 (files ../native/ppx_deriving_json_common.ml))

(copy_files#
 (files ../tools/ppx_deriving_tools.ml))

(copy_files#
 (files ../tools/ppx_deriving_tools.mli))
