(library
 (public_name melange-json.ppx)
 (name ppx_deriving_json_js)
 (modules :standard \ ppx_deriving_json_js_test)
 (libraries ppxlib)
 (ppx_runtime_libraries melange-json melange-json.ppx-runtime)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(executable
 (name ppx_deriving_json_js_test)
 (modules ppx_deriving_json_js_test)
 (libraries melange-json.ppx ppxlib))

(rule
 (target ppx_deriving_json_js.mli)
 (action
  (with-stdout-to
   %{target}
   (run echo ""))))

(rule
 (target ppx_deriving_json_js_test.ml)
 (action
  (with-stdout-to
   %{target}
   (run echo "let () = Ppxlib.Driver.standalone ()"))))

(copy_files#
 (files ../native/common/ppx_deriving_json_common.ml))

(copy_files#
 (files ../native/common/ppx_deriving_tools.{ml,mli}))
