(library
 (public_name melange-json.ppx)
 (name ppx_deriving_json_js)
 (modules :standard \ ppx_deriving_json_js_test)
 (libraries ppxlib)
 (ppx_runtime_libraries melange-json melange-json.jsonschema)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(executable
 (name ppx_deriving_json_js_test)
 (modules ppx_deriving_json_js_test)
 (libraries melange-json.ppx ppxlib))

(rule
 (target ppx_deriving_json_js.mli)
 (action
  (with-stdout-to
   %{target}
   (run echo ""))))

(rule
 (target ppx_deriving_json_js_test.ml)
 (action
  (with-stdout-to
   %{target}
   (run echo "let () = Ppxlib.Driver.standalone ()"))))

(copy_files#
 (files ../native/common/source.ml))

(copy_files#
 (files ../native/common/ast_helpers.ml))

(copy_files#
 (files ../native/common/repr.ml))

(copy_files#
 (files ../native/common/attrs.{ml,mli}))

(copy_files#
 (files ../native/common/json_string_deriver.ml))

(copy_files#
 (files ../native/common/conv.ml))

(copy_files#
 (files ../native/common/linter.ml))

; Shared jsonschema deriver sources (see ppx/native/dune for rationale). Compiled
; into melange-json.ppx so [@@deriving jsonschema] works on the Melange ppx too.

(copy_files#
 (files ../jsonschema/{schema,ppx_deriving_jsonschema}.{ml,mli}))
