(library
 (public_name melange-json-native.ppx)
 (name ppx_deriving_json_native)
 (modules
  :standard
  \
  ppx_deriving_json_runtime
  ppx_deriving_json_native_test
  ppx_deriving_json_classify
  ppx_deriving_json_errors
  ppx_deriving_json_exception)
 (libraries ppxlib)
 (ppx_runtime_libraries melange-json-native.ppx-runtime yojson)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(library
 (public_name melange-json-native.ppx-runtime)
 (name ppx_deriving_json_native_runtime)
 (wrapped false)
 (modules
  ppx_deriving_json_runtime
  ppx_deriving_json_classify
  ppx_deriving_json_errors
  ppx_deriving_json_exception)
 (libraries yojson))

(executable
 (name ppx_deriving_json_native_test)
 (modules ppx_deriving_json_native_test)
 (libraries melange-json-native.ppx ppxlib))

(rule
 (target ppx_deriving_json_native.mli)
 (action
  (with-stdout-to
   %{target}
   (run echo ""))))

(rule
 (target ppx_deriving_json_native_test.ml)
 (action
  (with-stdout-to
   %{target}
   (run echo "let () = Ppxlib.Driver.standalone ()"))))
