(library
 (public_name melange-json-native.ppx)
 (name ppx_deriving_json_native)
 (modules :standard \ ppx_deriving_json_native_test)
 (libraries ppxlib)
 (ppx_runtime_libraries
  melange-json-native
  yojson
  melange-json-native.jsonschema)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(executable
 (name ppx_deriving_json_native_test)
 (modules ppx_deriving_json_native_test)
 (libraries melange-json-native.ppx ppxlib))

(rule
 (target ppx_deriving_json_native.mli)
 (action
  (with-stdout-to
   %{target}
   (run echo ""))))

(rule
 (target ppx_deriving_json_native_test.ml)
 (action
  (with-stdout-to
   %{target}
   (run echo "let () = Ppxlib.Driver.standalone ()"))))

(copy_files#
 (files ./common/ppx_deriving_json_common.ml))

(copy_files#
 (files ./common/ppx_deriving_tools.{ml,mli}))

; The jsonschema deriver is shared between the native and browser ppx (it is
; platform-agnostic: it only emits references to Ppx_deriving_jsonschema_runtime).
; Like the common modules above, the sources are copied in rather than shared via
; a library, so the deriver ships inside melange-json-native.ppx with no extra package.

(copy_files#
 (files ../jsonschema/{attrs,schema,ppx_deriving_jsonschema}.{ml,mli}))

; include_subdirs triggers a dependency cycle
; $ dune runtest
; Error: Dependency cycle between:       
;   alias .melange-json-files
; -> alias .melange-json-native-files
; -> alias .melange-json-files
; -> required by alias ppx/test/runtest
; (include_subdirs (unqualified))
