(library
 (public_name jsonkit-native.ppx)
 (name ppx_deriving_json_native)
 (modules :standard \ ppx_deriving_json_native_test)
 (libraries ppxlib)
 (ppx_runtime_libraries jsonkit-native yojson jsonkit-native.jsonschema)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(executable
 (name ppx_deriving_json_native_test)
 (modules ppx_deriving_json_native_test)
 (libraries jsonkit-native.ppx ppxlib))

(rule
 (target ppx_deriving_json_native.mli)
 (action
  (with-stdout-to
   %{target}
   (run echo ""))))

(rule
 (target ppx_deriving_json_native_test.ml)
 (action
  (with-stdout-to
   %{target}
   (run echo "let () = Ppxlib.Driver.standalone ()"))))

(copy_files#
 (files ./common/source.ml))

(copy_files#
 (files ./common/ast_helpers.ml))

(copy_files#
 (files ./common/repr.ml))

(copy_files#
 (files ./common/attrs.{ml,mli}))

(copy_files#
 (files ./common/json_string_deriver.ml))

(copy_files#
 (files ./common/conv.ml))

; The jsonschema deriver is shared between the native and browser ppx (it is
; platform-agnostic: it only emits references to Ppx_deriving_jsonschema_runtime).
; Like the common modules above, the sources are copied in rather than shared via
; a library, so the deriver ships inside jsonkit-native.ppx with no extra package.

(copy_files#
 (files ../jsonschema/{schema,ppx_deriving_jsonschema}.{ml,mli}))

; include_subdirs triggers a dependency cycle
; $ dune runtest
; Error: Dependency cycle between:       
;   alias .jsonkit-files
; -> alias .jsonkit-native-files
; -> alias .jsonkit-files
; -> required by alias ppx/test/runtest
; (include_subdirs (unqualified))
