(cram
 (deps
  (package melange-json)
  (package melange-json-native)
  ./example.ml
  ./example_json_string.ml
  ./run.sh
  ../../.ocamlformat
  ../native/ppx_deriving_json_native_test.exe
  ../browser/ppx_deriving_json_js_test.exe))

(cram
 (applies_to ptype_open)
 (enabled_if
  (>= %{ocaml_version} 5.2.0)))

; Labeled-tuple surface syntax (e.g. [x:int * string]) is only parseable by
; the OCaml 5.4+ frontend, so this test can only run there.

(cram
 (applies_to labeled_tuples)
 (enabled_if
  (>= %{ocaml_version} 5.4.0)))
