; Melange runtime for [@@deriving jsonschema] (part of the melange-json package).
; The native counterpart lives in ../native/jsonschema and shares the
; platform-neutral sources via copy_files.

(library
 (name ppx_deriving_jsonschema_runtime)
 (public_name melange-json.jsonschema)
 (modes melange)
 (wrapped false))
