; Native runtime for [@@deriving jsonschema] (part of the melange-json-native package).
; classify/declassify are native-specific (identity); the platform-neutral sources
; are shared from the Melange runtime in ../../jsonschema via copy_files.

(library
 (name ppx_deriving_jsonschema_runtime)
 (public_name melange-json-native.jsonschema)
 (wrapped false))

(copy_files
 (files ../../jsonschema/ppx_deriving_jsonschema_runtime.ml))

(copy_files
 (files ../../jsonschema/ppx_deriving_jsonschema_runtime_primitives.{ml,mli}))
