(copy_files ../shared/cases.ml)

(copy_files ../shared/schema_snapshot.ml)

(copy_files ../shared/generate_schemas_cases.ml)

(melange.emit
 (target output)
 (libraries jsonkit jsonkit.jsonschema)
 (preprocess
  (pps jsonkit.ppx melange.ppx))
 (module_systems
  (commonjs js)))

(cram
 (deps
  (alias melange)
  ../test_schemas.expected.json
  ./output/ppx/jsonschema/test/melange/generate_schemas.js))
